--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,38 +21,68 @@
 
    <title>Text Encrypter</title>
 </head>
-<body>
+
+<body class="layout">
    <header>
-      <img src="./Images/Logo.png" alt="alura logo">
+      <div>
+         <img src="./Images/Logo.png" alt="alura logo">
+         <h1>Challenge Encrypter</h1>
+      </div>
+
+      <div class="header-links">
+         <label class="switch" >
+            <input type="checkbox" id="dark-mode-btn">
+            <span class="slider"></span>
+         </label>
+      </div>
    </header>
-   <main>
-      <textarea class="text-entered" cols="50" rows="12" placeholder="Enter your text here"></textarea>
-      
-      <h3 class="information"><i class="fa-solid fa-circle-info"></i> Only lower case and no tildes.</h3>
 
-      <button class="encrypt">Encrypt</button>
-      <button class="decrypt">Decrypt</button>
-      <button class="paste"><i class="fa-regular fa-paste"></i></button>
-      <button class="clear"><i class="fa-solid fa-trash-can"></i></button>
+   <main class="left-panel">
+      <textarea id="input" placeholder="Enter your text here"></textarea>
 
-      <div class="output">
-         <img class="boy-pic" src="./Images/Boy.png" alt="boy inspecting a diamond with a magnifier"></textarea>
-         
-         <h2 class="title">No message was found</h2>
-         <h3 class="subtitle">Enter the text you wish to encrypt or decrypt.</h3>
+      <h3 id="information"><i class="fa-solid fa-circle-info"></i> Only lower case and no tildes.</h3>
 
-         <textarea class="text-processed" cols="20" rows="15" readonly></textarea>
-         <button class="copy-btn">Copy</button>
-         <button class="restart"><i class="fa-solid fa-rotate-left"></i></button>
+      <div class="buttons-container">
+         <button id="encrypt-btn" class="btn-blue">Encrypt</button>
+         <button id="decrypt-btn" class="btn-outline">Decrypt</button>
+         <button id="paste-btn" class="btn-icon-blue"><i class="fa-regular fa-paste"></i></button>
+         <button id="clear-btn" class="btn-icon-outline"><i class="fa-solid fa-trash-can"></i></button>
       </div>
    </main>
+
+   <aside class="right-panel">
+      <div id="message-not-found">
+         <img class="boy-pic" src="./Images/Boy.png" alt="boy inspecting a diamond"></textarea>
+
+         <h2>No message was found</h2>
+         <p>Enter the text you wish to encrypt or decrypt.</p>
+      </div>
+
+      <div id="message-found">
+         <textarea id="output" readonly></textarea>
+         <div class="buttons-container">
+            <button id="copy-btn" class="btn-outline">Copy</button>
+            <button id="restart-btn" class="btn-icon-blue"><i class="fa-solid fa-rotate-left"></i></button>
+         </div>
+      </div>
+   </aside>
+
    <footer>
-      <a class="footer-link" href="https://www.linkedin.com/in/kristofercontreras2017" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-      <a class="footer-link" href="https://github.com/Kristofer2017" target="_blank"><i class="fa-brands fa-github"></i></a>
-      <a class="footer-link" href="mailto:kristofercontreras.2017@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></i></a>
+      <div class="footer-links">
+         <a href="https://www.linkedin.com/in/kristofercontreras2017" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+         </a>
+         <a href="https://github.com/Kristofer2017" target="_blank">
+            <i class="fa-brands fa-github"></i>
+         </a>
+         <a href="mailto:kristofercontreras.2017@gmail.com" target="_blank">
+            <i class="fa-solid fa-envelope"></i>
+         </a>
+      </div>
 
       <p>&copy 2023 Kristofer Vasquez</p>
-      <p>"The only way to truly fail is by giving up"</p>
+      <p>The only way to truly fail is by giving up</p>
    </footer>
 </body>
+
 </html>
